# LAB2MV

./: README.md
Lab2_MachineVision_PickAndPlace/: CMakeLists.txt  LICENSE  README.md  makefile
Lab2_MachineVision_PickAndPlace/data/: camrobot_params.xml  cma_robot_params.xml  color_params.xml  leftCamera_calibration_params.xml
Lab2_MachineVision_PickAndPlace/include/: DynamixelHandler.h  ImageProcessing.h  Kinematics.h  ReadWriteFunctions.h  RobotControl.h  Utils.h
Lab2_MachineVision_PickAndPlace/src/: DynamixelHandler.cpp  ImageProcessing.cpp  Kinematics.cpp  ReadWriteFunctions.cpp  RobotControl.cpp  Utils.cpp  calibrateCamRobotReferenceFrames.cpp  cartControl.cpp  jointControl.cpp  pickAndPlace.cpp  trackCube.cpp
camera_vision/Lab1_MachineVision_StereoVision/: .gitignore  LICENSE  README.md  makefile
camera_vision/Lab1_MachineVision_StereoVision/data/: disparity_params.xml  rightCamera_calibration_params.xml  settings_calib_leftCam.xml  settings_calib_rightCam.xml
camera_vision/Lab1_MachineVision_StereoVision/include/: ReadWriteFunctions.h
camera_vision/Lab1_MachineVision_StereoVision/src/: ImageProcessing.cpp  ReadWriteFunctions.cpp  calibrateDisparity.cpp  calibrateMonoCamera.cpp  calibrateObjectColor.cpp  calibrateStereoCamera.cpp  determineObjectPosition.cpp  launch3DMovie.cpp  trackObjectPosition.cpp
